# atlas

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  jq
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-demo.yml
src/: api_docs.rs  db_refresher.rs  download_utils.rs  lib.rs  main.rs  maxmind_db.rs  maxmind_db_updater.rs  models.rs  network_utils.rs
src/schemas/: city.rs  city_result.rs  connection_type_result.rs  country.rs  geo_location.rs  lookup_response.rs  lookup_result.rs  mod.rs  postal.rs  subdivision.rs
src/services/: healthcheck.rs  lookup.rs  mod.rs
tests/: healthcheck_service.rs  lookup_service.rs
