[package]
name = "atlas-rs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "atlas_rs"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-http = "3"
futures-util = "0.3.30"
maxminddb = "0.24.0"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
utoipa = "4"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
