[package]
name = "atlas-rs"
version = "0.0.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "atlas_rs"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-http = "3"
futures-util = "0.3"
maxminddb = "0.28"
reqwest = { version = "0.13", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
uninlined-format-args = "warn"
needless-pass-by-value = "warn"
wildcard-imports = "warn"
